--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ http://www.tooplate.com/view/2082-pure-mix
                            <li><a href="#" class="opc-main-bg" data-filter=".Architecture">Architecture</a></li>
                            <li><a href="#" class="opc-main-bg" data-filter=".Cultrue">Cultrue</a></li>
                            <li><a href="#" class="opc-main-bg" data-filter=".Music">Music</a></li>
+													 <li><a href="#" class="opc-main-bg" data-filter=".Food">Food</a></li>
                         <li><a href="#" class="opc-main-bg" data-filter=".photography">photography</a></li>
                         </ul>
 
@@ -123,73 +124,73 @@ http://www.tooplate.com/view/2082-pure-mix
                         <div class="iso-box-section wow fadeInUp" data-wow-delay="1s">
                            <div class="iso-box-wrapper col4-iso-box">
 
-                              <div class="iso-box photoshop branding col-md-4 col-sm-6">
+                              <div class="iso-box photoGRAPHY col-md-4 col-sm-6">
                                  <div class="portfolio-thumb">
-                                    <img src="OWNIMAGES/1.png" class="img-responsive" alt="Portfolio">
+                                    <img src="/Users/jessicasin/Desktop/CFG/CFG/OWNIMAGES/HK_PHOTOGRAPHY.jpg" class="img-responsive" alt="Portfolio">
                                        <div class="portfolio-overlay">
                                           <div class="portfolio-item">
                                                 <a href="single-project.html"><i class="fa fa-link"></i></a>
-                                                <h2>Project One</h2>
+                                                <h2>HONG KONG</h2>
                                              </div>
                                        </div>
                                  </div>
                               </div>
 
-                              <div class="iso-box graphic template col-md-4 col-sm-6">
+                              <div class="iso-box Architecture col-md-4 col-sm-6">
                                  <div class="portfolio-thumb">
-                                    <img src="images/portfolio-img2.jpg" class="img-responsive" alt="Portfolio">
+                                    <img src="/Users/jessicasin/Desktop/CFG/CFG/OWNIMAGES/JAPAN_ARCHI.JPG" class="img-responsive" alt="Portfolio">
                                        <div class="portfolio-overlay">
                                           <div class="portfolio-item">
                                                 <a href="single-project.html"><i class="fa fa-link"></i></a>
-                                                <h2>Project Two</h2>
+                                                <h2>JAPAN</h2>
                                              </div>
                                        </div>
                                  </div>
                               </div>
 
-                              <div class="iso-box template graphic col-md-4 col-sm-6">
+                              <div class="iso-box Cultrue col-md-4 col-sm-6">
                                  <div class="portfolio-thumb">
-                                    <img src="images/portfolio-img3.jpg" class="img-responsive" alt="Portfolio">
+                                    <img src="/Users/jessicasin/Desktop/CFG/CFG/OWNIMAGES/JAPAN_CULTURE.png" class="img-responsive" alt="Portfolio">
                                        <div class="portfolio-overlay">
                                           <div class="portfolio-item">
                                                 <a href="single-project.html"><i class="fa fa-link"></i></a>
-                                                <h2>Project Three</h2>
+                                                <h2>JAPAN</h2>
                                              </div>
                                        </div>
                                  </div>
                               </div>
 
-                              <div class="iso-box graphic template col-md-4 col-sm-6">
+                              <div class="iso-box Architecture col-md-4 col-sm-6">
                                  <div class="portfolio-thumb">
-                                    <img src="images/portfolio-img4.jpg" class="img-responsive" alt="Portfolio">
+                                    <img src="/Users/jessicasin/Desktop/CFG/CFG/OWNIMAGES/MOROCCO_ARCHI.jpg" class="img-responsive" alt="Portfolio">
                                        <div class="portfolio-overlay">
                                           <div class="portfolio-item">
                                                 <a href="single-project.html"><i class="fa fa-link"></i></a>
-                                                <h2>Project Four</h2>
+                                                <h2>MOROCCO</h2>
                                              </div>
                                        </div>
                                  </div>
                               </div>
 
-                              <div class="iso-box photoshop branding col-md-4 col-sm-6">
+                              <div class="iso-box photography col-md-4 col-sm-6">
                                  <div class="portfolio-thumb">
-                                    <img src="images/portfolio-img5.jpg" class="img-responsive" alt="Portfolio">
+                                    <img src="/Users/jessicasin/Desktop/CFG/CFG/OWNIMAGES/MOROCCO_PHOTOGRAPHY.jpg" class="img-responsive" alt="Portfolio">
                                        <div class="portfolio-overlay">
                                           <div class="portfolio-item">
                                                 <a href="single-project.html"><i class="fa fa-link"></i></a>
-                                                <h2>Project Five</h2>
+                                                <h2>MOROCCO</h2>
                                              </div>
                                        </div>
                                  </div>
                               </div>
 
-                              <div class="iso-box graphic branding col-md-4 col-sm-6">
+                              <div class="iso-box Food col-md-4 col-sm-6">
                                  <div class="portfolio-thumb">
-                                    <img src="images/portfolio-img6.jpg" class="img-responsive" alt="Portfolio">
+                                    <img src="/Users/jessicasin/Desktop/CFG/CFG/OWNIMAGES/VENICE_FOOD.jpg" class="img-responsive" alt="Portfolio">
                                        <div class="portfolio-overlay">
                                           <div class="portfolio-item">
                                                 <a href="single-project.html"><i class="fa fa-link"></i></a>
-                                                <h2>Project Six</h2>
+                                                <h2>VENICE</h2>
                                              </div>
                                        </div>
                                  </div>
